--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ log = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
 thiserror = "1.0"
 tokio = { version = "1.23", features = ["full"] }
+warp = "0.3"
